kubernetes-network-segmentation/evidence/task2-networkpolicies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-frontend-to-backend","namespace":"network-segmentation"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"frontend"}}}],"ports":[{"port":5432,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"backend"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-09-18T19:15:10Z"
    generation: 1
    name: allow-frontend-to-backend
    namespace: network-segmentation
    resourceVersion: "812"
    uid: 75c791da-c108-474e-85fb-35053f5883d7
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend
      ports:
      - port: 5432
        protocol: TCP
    podSelector:
      matchLabels:
        app: backend
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-trusted-namespace-to-backend","namespace":"network-segmentation"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"access-zone":"trusted"}}}],"ports":[{"port":5432,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"backend"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-09-18T19:15:27Z"
    generation: 1
    name: allow-trusted-namespace-to-backend
    namespace: network-segmentation
    resourceVersion: "831"
    uid: db33ae1e-9486-4763-850d-2acae095bf1d
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            access-zone: trusted
      ports:
      - port: 5432
        protocol: TCP
    podSelector:
      matchLabels:
        app: backend
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"deny-backend-ingress","namespace":"network-segmentation"},"spec":{"podSelector":{"matchLabels":{"app":"backend"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-09-18T19:14:47Z"
    generation: 1
    name: deny-backend-ingress
    namespace: network-segmentation
    resourceVersion: "790"
    uid: 7a395b7f-21e6-4e1c-a3af-dcd16b2e9787
  spec:
    podSelector:
      matchLabels:
        app: backend
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
